--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ tests/maxsat/log.txt
 tests/partialmaxsat/log.txt
 tests/partialweightedmaxsat/log.txt
 
+# test temporary files
+tests/writers/temp/*.dot
