Excluded generated sources from test coverage

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.7.5.201505241946</version>
+        <configuration>
+          <excludes>
+            <exclude>**/LogicNGPropositional*</exclude>
+            <exclude>**/LogicNGPseudoBoolean*</exclude>
+          </excludes>
+        </configuration>
         <executions>
           <execution>
             <id>default-prepare-agent</id>
