--- a/pom.xml
+++ b/pom.xml
@@ -32,28 +32,28 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+
     <sonar.language>java</sonar.language>
     <sonar.exclusions>**/LogicNGPropositional*.java,**/LogicNGPseudoBoolean*.java</sonar.exclusions>
+
+    <!-- Dependency Versions -->
+    <version.antlr>4.7</version.antlr>
+    <version.jacoco>0.7.9</version.jacoco>
+    <version.coveralls>4.3.0-SNAPSHOT</version.coveralls>
+    <version.junit>4.12</version.junit>
+    <version.assertj>2.8.0</version.assertj>
   </properties>
 
   <build>
     <plugins>
-      <!-- Java Compiler  -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.0</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-
       <!-- ANTLR4 (Parser Generation)  -->
       <plugin>
         <groupId>org.antlr</groupId>
         <artifactId>antlr4-maven-plugin</artifactId>
-        <version>4.5.3</version>
+        <version>${version.antlr}</version>
         <configuration>
           <sourceDirectory>src/main/resources/parser</sourceDirectory>
           <outputDirectory>target/generated-sources/antlr/org/logicng/io/parsers</outputDirectory>
@@ -71,7 +71,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.7.201606060606</version>
+        <version>${version.jacoco}</version>
         <configuration>
           <excludes>
             <exclude>**/LogicNGPropositional*</exclude>
@@ -149,7 +149,7 @@
       <plugin>
         <groupId>org.eluder.coveralls</groupId>
         <artifactId>coveralls-maven-plugin</artifactId>
-        <version>4.3.0-SNAPSHOT</version>
+        <version>${version.coveralls}</version>
         <configuration>
           <sourceDirectories>
             <sourceDirectory>target/generated-sources/antlr</sourceDirectory>
@@ -164,20 +164,21 @@
     <dependency>
       <groupId>org.antlr</groupId>
       <artifactId>antlr4-runtime</artifactId>
-      <version>4.5.3</version>
+      <version>${version.antlr}</version>
     </dependency>
 
     <!-- Testing -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>${version.junit}</version>
       <scope>test</scope>
     </dependency>
+
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>2.6.0</version>
+      <version>${version.assertj}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
