--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.0</version>
         <configuration>
           <useSystemClassLoader>false</useSystemClassLoader>
         </configuration>
