--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.logicng</groupId>
   <artifactId>logicng</artifactId>
-  <version>1.4.1</version>
+  <version>1.5.0</version>
   <packaging>jar</packaging>
 
   <name>LogicNG</name>
@@ -52,6 +52,10 @@
     <developer>
       <name>Rouven Walter</name>
       <email>rouven.walter@booleworks.com</email>
+    </developer>
+    <developer>
+      <name>Eva Mayer</name>
+      <email>eva.mayer@booleworks.com</email>
     </developer>
   </developers>
 
