--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
     <version.jacoco>0.8.5</version.jacoco>
     <version.coveralls>4.3.0</version.coveralls>
     <version.surefire>3.0.0-M5</version.surefire>
+    <version.nexus-staging>1.6.8</version.nexus-staging>
+    <version.maven-gpg>1.6</version.maven-gpg>
+    <version.maven-source>3.2.1</version.maven-source>
+    <version.maven-javadoc>3.2.0</version.maven-javadoc>
+    <version.maven-jar>3.2.0</version.maven-jar>
+
   </properties>
 
   <build>
@@ -224,7 +230,7 @@
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
-            <version>1.6.8</version>
+            <version>${version.nexus-staging}</version>
             <extensions>true</extensions>
             <configuration>
               <serverId>ossrh</serverId>
@@ -237,7 +243,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.6</version>
+            <version>${version.maven-gpg}</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
@@ -253,7 +259,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
-            <version>3.2.1</version>
+            <version>${version.maven-source}</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -268,7 +274,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.2.0</version>
+            <version>${version.maven-javadoc}</version>
             <executions>
               <execution>
                 <id>attach-javadocs</id>
@@ -277,6 +283,25 @@
                 </goals>
               </execution>
             </executions>
+          </plugin>
+
+          <!-- Store POM version in application manifest -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>${version.maven-jar}</version>
+            <configuration>
+              <skipIfEmpty>true</skipIfEmpty>
+              <archive>
+                <manifest>
+                  <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                  <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                </manifest>
+                <manifestEntries>
+                  <Built-By>BooleWorks GmbH</Built-By>
+                </manifestEntries>
+              </archive>
+            </configuration>
           </plugin>
         </plugins>
       </build>
