always print stacktrace in tests

--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,7 @@
         <version>${version.surefire}</version>
         <configuration>
           <useSystemClassLoader>false</useSystemClassLoader>
+          <trimStackTrace>false</trimStackTrace>
         </configuration>
       </plugin>
     </plugins>
