--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,16 @@
   </properties>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>org/logicng/version.txt</include>
+        </includes>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+
     <plugins>
       <!-- ANTLR4 (Parser Generation)  -->
       <plugin>
