increase heap size for GitHub Action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,9 @@ jobs:
         with:
           java-version: 1.8
       - name: Build with Maven
-        run: mvn -B package
+        run: |
+          export MAVEN_OPTS="-Xmx2g"
+          mvn -B package
       - name: Upload coverage to codecov.io
         uses: codecov/codecov-action@v1
         with:
