--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,13 @@
 name: build
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
-  build:
+  build-linux-macos:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ ubuntu-latest, macos-latest ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -17,6 +17,26 @@ jobs:
       - name: Build with Maven
         run: |
           export MAVEN_OPTS="-Xmx2g"
+          mvn -B package
+      - name: Upload coverage to codecov.io
+        uses: codecov/codecov-action@v1
+        with:
+          name: LogicNG
+          file: ./target/site/jacoco/jacoco.xml
+          flags: unittests
+          env_vars: OS
+
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Build with Maven
+        run: |
+          set MAVEN_OPTS="-Xmx2g"
           mvn -B package
       - name: Upload coverage to codecov.io
         uses: codecov/codecov-action@v1
