add -Xmx2g to surefire plugin

--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,7 @@
         <configuration>
           <useSystemClassLoader>false</useSystemClassLoader>
           <trimStackTrace>false</trimStackTrace>
+          <argLine>-Xmx2g</argLine>
         </configuration>
       </plugin>
     </plugins>
