--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,11 +3,11 @@ name: build
 on: [ push, pull_request ]
 
 jobs:
-  build-linux-macos:
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -15,29 +15,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Build with Maven
-        run: |
-          export MAVEN_OPTS="-Xmx2g"
-          mvn -B package
-      - name: Upload coverage to codecov.io
-        uses: codecov/codecov-action@v1
-        with:
-          name: LogicNG
-          file: ./target/site/jacoco/jacoco.xml
-          flags: unittests
-          env_vars: OS
-
-  build-windows:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Build with Maven
-        run: |
-          set MAVEN_OPTS="-Xmx2g"
-          mvn -B package
+        run: mvn -B package
       - name: Upload coverage to codecov.io
         uses: codecov/codecov-action@v1
         with:
