--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,13 @@
 name: build
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -15,9 +15,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Build with Maven
-        run: |
-          export MAVEN_OPTS="-Xmx2g"
-          mvn -B package
+        run: mvn -B package
       - name: Upload coverage to codecov.io
         uses: codecov/codecov-action@v1
         with:
