--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.logicng</groupId>
   <artifactId>logicng</artifactId>
-  <version>2.2.0</version>
-  <packaging>jar</packaging>
+  <version>2.2.1-SNAPSHOT</version>
+  <packaging>bundle</packaging>
 
   <name>LogicNG</name>
   <description>The Next Generation Logic Library</description>
@@ -87,6 +87,7 @@
     <version.surefire>3.0.0-M5</version.surefire>
     <version.nexus-staging>1.6.8</version.nexus-staging>
     <version.maven-gpg>1.6</version.maven-gpg>
+    <version.osgi-plugin>5.1.6</version.osgi-plugin>
     <version.maven-source>3.2.1</version.maven-source>
     <version.maven-javadoc>3.2.0</version.maven-javadoc>
     <version.maven-jar>3.2.0</version.maven-jar>
@@ -211,6 +212,19 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+
+      <!-- Support for OSGi -->
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>${version.osgi-plugin}</version>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Bundle-RequiredExecutionEnvironment>JavaSE-1.8</Bundle-RequiredExecutionEnvironment>
+          </instructions>
+        </configuration>
       </plugin>
 
       <!-- Coveralls.io test coverage -->
