Updated Readme and list of current developers

--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,8 @@
       <email>rouven.walter@booleworks.com</email>
     </developer>
     <developer>
-      <name>Eva Mayer</name>
-      <email>eva.mayer@booleworks.com</email>
+      <name>Elena Natterer</name>
+      <email>elena.natterer@booleworks.com</email>
     </developer>
   </developers>
 
