--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
         </executions>
       </plugin>
 
-      <!-- Store POM version in application manifest -->
+      <!-- Store POM version in application manifest and set Jigsaw module name-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -138,6 +138,7 @@
             </manifest>
             <manifestEntries>
               <Built-By>BooleWorks GmbH</Built-By>
+              <Automatic-Module-Name>logicng</Automatic-Module-Name>
             </manifestEntries>
           </archive>
         </configuration>
