--- a/pom.xml
+++ b/pom.xml
@@ -25,18 +25,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.logicng</groupId>
-  <artifactId>logicng</artifactId>
+  <artifactId>logicng-j11</artifactId>
   <version>2.4.1</version>
   <packaging>bundle</packaging>
 
   <name>LogicNG</name>
   <description>The Next Generation Logic Library</description>
-  <url>http://www.logicng.org</url>
+  <url>https://www.logicng.org</url>
 
   <licenses>
     <license>
       <name>The Apache License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
 
@@ -68,30 +68,29 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
 
     <sonar.language>java</sonar.language>
     <sonar.exclusions>**/LogicNGPropositional*.java,**/LogicNGPseudoBoolean*.java</sonar.exclusions>
 
     <!-- Dependency Versions -->
-    <version.antlr>4.9.3</version.antlr>
-    <version.junit>5.9.0</version.junit>
-    <version.assertj>3.23.1</version.assertj>
-    <version.mockito>4.7.0</version.mockito>
+    <version.antlr>4.11.1</version.antlr>
+    <version.junit>5.9.2</version.junit>
+    <version.assertj>3.24.2</version.assertj>
+    <version.mockito>5.1.1</version.mockito>
 
     <!-- Plugin Versions -->
-    <version.antlr-plugin>4.9.3</version.antlr-plugin>
+    <version.antlr-plugin>4.11.1</version.antlr-plugin>
     <version.jacoco>0.8.8</version.jacoco>
     <version.coveralls>4.3.0</version.coveralls>
-    <version.surefire>3.0.0-M7</version.surefire>
-    <version.nexus-staging>1.6.8</version.nexus-staging>
+    <version.surefire>3.0.0-M9</version.surefire>
+    <version.nexus-staging>1.6.13</version.nexus-staging>
     <version.maven-gpg>1.6</version.maven-gpg>
     <version.osgi-plugin>5.1.8</version.osgi-plugin>
     <version.maven-source>3.2.1</version.maven-source>
-    <version.maven-javadoc>3.2.0</version.maven-javadoc>
-    <version.maven-jar>3.2.0</version.maven-jar>
-
+    <version.maven-javadoc>3.5.0</version.maven-javadoc>
+    <version.maven-jar>3.3.0</version.maven-jar>
   </properties>
 
   <build>
@@ -138,7 +137,6 @@
             </manifest>
             <manifestEntries>
               <Built-By>BooleWorks GmbH</Built-By>
-              <Automatic-Module-Name>logicng</Automatic-Module-Name>
             </manifestEntries>
           </archive>
         </configuration>
@@ -385,4 +383,3 @@
     </profile>
   </profiles>
 </project>
-
