--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.logicng</groupId>
   <artifactId>logicng-j11</artifactId>
-  <version>2.4.2</version>
+  <version>2.4.3</version>
   <packaging>bundle</packaging>
 
   <name>LogicNG</name>
@@ -76,20 +76,20 @@
 
     <!-- Dependency Versions -->
     <version.antlr>4.13.1</version.antlr>
-    <version.junit>5.9.2</version.junit>
-    <version.assertj>3.24.2</version.assertj>
+    <version.junit>5.10.1</version.junit>
+    <version.assertj>3.25.2</version.assertj>
     <version.mockito>5.2.0</version.mockito>
 
     <!-- Plugin Versions -->
     <version.antlr-plugin>4.13.1</version.antlr-plugin>
-    <version.jacoco>0.8.8</version.jacoco>
+    <version.jacoco>0.8.11</version.jacoco>
     <version.coveralls>4.3.0</version.coveralls>
-    <version.surefire>3.0.0-M9</version.surefire>
+    <version.surefire>3.2.5</version.surefire>
     <version.nexus-staging>1.6.13</version.nexus-staging>
     <version.maven-gpg>1.6</version.maven-gpg>
-    <version.osgi-plugin>5.1.8</version.osgi-plugin>
-    <version.maven-source>3.2.1</version.maven-source>
-    <version.maven-javadoc>3.5.0</version.maven-javadoc>
+    <version.osgi-plugin>5.1.9</version.osgi-plugin>
+    <version.maven-source>3.3.0</version.maven-source>
+    <version.maven-javadoc>3.6.3</version.maven-javadoc>
     <version.maven-jar>3.3.0</version.maven-jar>
   </properties>
 
