--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,8 @@
     <version.antlr>4.9.3</version.antlr>
     <version.junit>5.10.2</version.junit>
     <version.assertj>3.25.3</version.assertj>
-    <version.mockito>5.2.0</version.mockito>
+    <!-- Version 5.x requires Java 11 -->
+    <version.mockito>4.11.0</version.mockito>
 
     <!-- Plugin Versions -->
     <version.antlr-plugin>4.9.3</version.antlr-plugin>
