--- a/parser/pom.xml
+++ b/parser/pom.xml
@@ -31,21 +31,29 @@
     <version>2.5.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>logicng-core</artifactId>
+  <artifactId>logicng</artifactId>
   <packaging>bundle</packaging>
 
   <build>
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-        <includes>
-          <include>org/logicng/version.txt</include>
-        </includes>
-        <filtering>true</filtering>
-      </resource>
-    </resources>
-
     <plugins>
+      <!-- ANTLR4 (Parser Generation)  -->
+      <plugin>
+        <groupId>org.antlr</groupId>
+        <artifactId>antlr4-maven-plugin</artifactId>
+        <version>${version.antlr-plugin}</version>
+        <configuration>
+          <sourceDirectory>src/main/antlr</sourceDirectory>
+          <outputDirectory>target/generated-sources/antlr/org/logicng/io/parsers</outputDirectory>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>antlr4</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -179,96 +187,25 @@
           <argLine>-Xmx2g</argLine>
         </configuration>
       </plugin>
-
-      <!-- ANTLR4 for Tests (Parser Generation)  -->
-      <plugin>
-        <groupId>org.antlr</groupId>
-        <artifactId>antlr4-maven-plugin</artifactId>
-        <version>${version.antlr-plugin}</version>
-        <configuration>
-          <sourceDirectory>../parser/src/main/antlr</sourceDirectory>
-          <outputDirectory>target/generated-test-sources/antlr/org/logicng/io/parsers</outputDirectory>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>generate-test-sources</phase>
-            <goals>
-              <goal>antlr4</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>${version.resources-plugin}</version>
-        <executions>
-          <execution>
-            <id>copy-parser-classes</id>
-            <phase>process-test-sources</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>target/generated-test-sources/antlr/org/logicng/io/parsers</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>../parser/src/main/java/org/logicng/io/parsers</directory>
-                  <filtering>false</filtering>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-          <execution>
-            <id>copy-reader-classes</id>
-            <phase>process-test-sources</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>target/generated-test-sources/antlr/org/logicng/io/readers</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>../parser/src/main/java/org/logicng/io/readers</directory>
-                  <filtering>false</filtering>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>${version.build-helper-plugin}</version>
-        <executions>
-          <execution>
-            <id>add-parser-sources</id>
-            <phase>generate-test-sources</phase>
-            <goals>
-              <goal>add-test-source</goal>
-            </goals>
-            <configuration>
-              <sources>
-                <source>target/generated-test-sources/antlr</source>
-              </sources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
   </build>
 
   <dependencies>
-    <!-- Testing -->
+    <!-- LogicNG Core -->
+    <dependency>
+      <groupId>org.logicng</groupId>
+      <artifactId>logicng-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <!-- Parser -->
     <dependency>
       <groupId>org.antlr</groupId>
       <artifactId>antlr4-runtime</artifactId>
       <version>${version.antlr}</version>
-      <scope>test</scope>
     </dependency>
 
+    <!-- Testing -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
@@ -287,27 +224,6 @@
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>${version.assertj}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>${version.mockito}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-junit-jupiter</artifactId>
-      <version>${version.mockito}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-inline</artifactId>
-      <version>${version.mockito}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
