--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 
   <modules>
     <module>core</module>
+    <module>parser</module>
   </modules>
 
   <licenses>
@@ -88,5 +89,7 @@
     <version.maven-source>3.3.0</version.maven-source>
     <version.maven-javadoc>3.6.3</version.maven-javadoc>
     <version.maven-jar>3.3.0</version.maven-jar>
+    <version.resources-plugin>3.3.1</version.resources-plugin>
+    <version.build-helper-plugin>1.9.1</version.build-helper-plugin>
   </properties>
 </project>
