--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${version.surefire}</version>
+        <configuration>
+          <argLine>-Xmx4g</argLine>
+        </configuration>
       </plugin>
 
       <!-- ANTLR4 (Parser Generation) for Tests  -->
