--- a/pom.xml
+++ b/pom.xml
@@ -224,7 +224,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${version.surefire}</version>
         <configuration>
-          <argLine>-Xmx4g</argLine>
+          <argLine>${argLine} -Xmx4g</argLine>
         </configuration>
       </plugin>
 
